--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vendor/acdh-repo-lib",
+    "name": "acdh-oeaw/acdh-repo-lib",
     "description": "A client library for the ACDH digital objects repository",
     "authors": [
         {
