--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
   - docker
 
 install:
+  - find . -name config.yaml
   - docker run --name acdh-repo -p 80:8080 -d zozlak/acdh-repo
   - sleep 30
   - sed -i -e 's|urlBase:.*|urlBase: http://127.0.0.1|g' tests/config.yaml
