--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ sudo: required
 services:
   - docker
 
+before_isntall:
+  - echo 'extension="yaml.so"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+
 install:
   - docker run --name acdh-repo -p 80:8080 -d zozlak/acdh-repo
   - sleep 30
