--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ sudo: required
 services:
   - docker
 
-before_isntall:
+before_install:
   - echo 'extension="yaml.so"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 
 install:
