--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
+dist: bionic
+
 language: php
+
 php:
   - 7.2
   - 7.3
@@ -9,7 +12,7 @@ services:
   - docker
 
 install:
-  - pecl install yaml
+#  - pecl install yaml
   - docker run --name acdh-repo -p 80:8080 -d zozlak/acdh-repo
   - sleep 30
   - "sed -i -e 's|urlBase:.*|urlBase: http://127.0.0.1|g' tests/config.yaml"
