--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ services:
   - docker
 
 install:
+  - sudo apt install -y libyaml-dev
   - pecl install yaml
   - docker run --name acdh-repo -p 80:8080 -d zozlak/acdh-repo
   - sleep 30
