--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ services:
 
 install:
   - sudo apt install -y libyaml-dev
-  - pecl install yaml
+  - 'printf "\n" | pecl install yaml'
   - docker run --name acdh-repo -p 80:8080 -d zozlak/acdh-repo
   - sleep 30
   - "sed -i -e 's|urlBase:.*|urlBase: http://127.0.0.1|g' tests/config.yaml"
