--- a/tests/config.yaml
+++ b/tests/config.yaml
@@ -1,6 +1,6 @@
 rest:
-    urlBase: https://test.localhost
-    pathBase: /
+    urlBase: http://127.0.0.1
+    pathBase: /rest/
     verifyCert: false
     headers:
         metadataReadMode: X-METADATA-READ-MODE
@@ -18,6 +18,8 @@ schema:
     fileName: http://www.ebu.ch/metadata/ontologies/ebucore/ebucore#filename
     mime: https://vocabs.acdh.oeaw.ac.at/schema#hasFormat
     hash: http://www.loc.gov/premis/rdf/v1#hasMessageDigest
+    binaryModificationDate: http://fedora.info/definitions/v4/repository#lastModifiedBin
+    binaryModificationUser: http://fedora.info/definitions/v4/repository#lastModifiedByBin
     modificationDate: http://fedora.info/definitions/v4/repository#lastModified
     modificationUser: http://fedora.info/definitions/v4/repository#lastModifiedBy
     creationDate: http://fedora.info/definitions/v4/repository#created
