--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "acdh-oeaw/acdh-repo-lib",
+    "name": "acdh-oeaw/arche-lib",
     "type": "library",
     "description": "A client library for the ACDH digital objects repository",
     "keywords": [],
-    "homepage": "https://github.com/zozlak/acdh-repo-lib",
+    "homepage": "https://github.com/acdh-oeaw/arche-phplib",
     "license": "MIT",
     "authors": [
         {
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "*",
+        "guzzlehttp/guzzle": "^6",
         "acdh-oeaw/easyrdf": "*",
         "zozlak/rdf-constants": "*"
     },
