--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -12,4 +12,4 @@ jobs:
     - name: install phpdocumentator
       run: curl https://github.com/phpDocumentor/phpDocumentor/releases/download/v3.0.0-rc/phpDocumentor.phar > phpdoc.phar
     - name: generate docs
-      run: php -f phpdoc.phar -d src -t docs
+      run: php -f phpdoc.phar run -d src -t docs
