--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install phpdocumentator
-      run: curl https://github.com/phpDocumentor/phpDocumentor/releases/download/v3.0.0-rc/phpDocumentor.phar > phpdoc.phar
+      run: curl -L https://github.com/phpDocumentor/phpDocumentor/releases/download/v3.0.0-rc/phpDocumentor.phar > phpdoc.phar
     - name: generate docs
       run: php -f phpdoc.phar run -d src -t docs
