--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -2,7 +2,9 @@
 
 name: document
 
-on: push
+on: 
+  push:
+    tags-ignore: docs
 
 jobs:
   document:
@@ -11,6 +13,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: install phpdocumentator
       run: curl -L https://github.com/phpDocumentor/phpDocumentor/releases/download/v3.0.0-rc/phpDocumentor.phar > phpdoc.phar
+    - name: get docs branch
+      run: git clone 
     - name: generate docs
       run: php -f phpdoc.phar run -d src -t docs
     - name: commit docs
@@ -19,5 +23,5 @@ jobs:
         git config user.name "Github Actions Workflow"
         git add docs/*
         git commit -a -m 'Documentation updated'
-        git remote -v
-        git branch -v
+        git tag docs
+        git push origin docs
