--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -10,7 +10,9 @@ jobs:
     - name: install phpdocumentator
       run: curl -L https://github.com/phpDocumentor/phpDocumentor/releases/download/v3.0.0-rc/phpDocumentor.phar > phpdoc.phar
     - name: generate docs
-      run: php -f phpdoc.phar run -d src -t docs
+      run: |
+        rm -fR docs/*
+        php -f phpdoc.phar run -d src -t docs
     - name: commit docs
       run: |
         git config user.email "workflow@github.actions"
