--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -9,14 +9,17 @@ jobs:
     - uses: actions/checkout@v2
     - name: install phpdocumentator
       run: curl -L https://github.com/phpDocumentor/phpDocumentor/releases/download/v3.0.0-rc/phpDocumentor.phar > phpdoc.phar
+    - name: fetch docs repo
+      run: git clone --depth 1 git@github.com:acdh-oeaw/arche-docs.git docsrepo
     - name: generate docs
       run: |
-        rm -fR docs/*
-        php -f phpdoc.phar run -d src -t docs
+        rm -fR docsrepo/arche-lib/*
+        php -f phpdoc.phar run -d src -t docsrepo/arche-lib
     - name: commit docs
       run: |
+        cd docsrepo
         git config user.email "workflow@github.actions"
         git config user.name "Github Actions Workflow"
-        git add docs/*
+        git add arche-lib/*
         git commit -a -m 'Documentation updated'
         git push origin
