With docs repo deployment token

--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: webfactory/ssh-agent@v0.2.0
+      with: ssh-private-key: ${{ secrets.docsRepoToken }}
     - name: install phpdocumentator
       run: curl -L https://github.com/phpDocumentor/phpDocumentor/releases/download/v3.0.0-rc/phpDocumentor.phar > phpdoc.phar
     - name: fetch docs repo
