--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -13,14 +13,12 @@ jobs:
     - uses: webfactory/ssh-agent@v0.4.1
       with: 
         ssh-private-key: ${{ secrets.docsRepoToken }}
-    - name: install phpdocumentator
-      run: curl -L https://github.com/phpDocumentor/phpDocumentor/releases/download/v3.0.0/phpDocumentor.phar > phpdoc.phar
     - name: fetch docs repo
       run: git clone --depth 1 git@github.com:acdh-oeaw/arche-docs.git docsrepo
     - name: generate docs
       run: |
         rm -fR docsrepo/arche-lib/*
-        php -f phpdoc.phar run -d src -t docsrepo/arche-lib
+        docker run --rm -v $(pwd):/data phpdoc/phpdoc -d src -t docsrepo/arche-lib
     - name: commit docs
       run: |
         cd docsrepo
