--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,16 @@
     },
     "autoload": {
         "psr-4": {
-            "acdhOeaw\\": "src/acdhOeaw",
-            "acdhOeaw\\acdhRepoLib\\": "tests"
+            "acdhOeaw\\": "src/acdhOeaw"
         }
     },
     "require-dev": {
         "phpunit/phpunit": "*",
         "phpstan/phpstan": "*"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "acdhOeaw\\arche\\lib\\": "tests"
+        }
     }
 }
