--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
     - name: clone repo config
       run: |
         git clone --depth 1 --branch master https://github.com/acdh-oeaw/arche-docker-config.git config
+        chmod +x config/run.d/xdebug.sh
         cp tests/config.yaml config/yaml/local.yaml
         cp .github/workflows/30-fixVocabularies.sh config/initScripts/
     - name: run repo docker
