Tests fixed and moved to own namespace

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "acdhOeaw\\arche\\lib\\": "tests"
+            "acdhOeaw\\arche\\lib\\tests\\": "tests"
         }
     }
 }
