--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=8.0 <=8.1",
+        "php": ">=8.0 <8.2",
         "guzzlehttp/guzzle": "^7 | ^6",
         "acdh-oeaw/easyrdf": ">=0.13.5",
         "zozlak/rdf-constants": "^1",
