RepoDb::getFtsQuery(): fix triples numbering and tests

--- a/tests/config.yaml
+++ b/tests/config.yaml
@@ -15,6 +15,7 @@ schema:
     delete: delete://delete
     searchMatch: search://match
     searchFts: search://fts
+    searchFtsProperty: search://ftsProperty
     searchCount: search://count
     searchWeight: search://weight
     searchOrder: search://order
