--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
         "zozlak/rdf-constants": "^1",
         "zozlak/query-part": "^2",
         "psr/log": "*",
-        "sweetrdf/rdf-interface": "^2.0.0-RC3",
+        "sweetrdf/rdf-interface": "dev-master",
         "sweetrdf/quick-rdf": "dev-master",
         "sweetrdf/quick-rdf-io": "dev-master",
-        "sweetrdf/term-templates": "^2"
+        "sweetrdf/term-templates": "dev-dev",
+        "sweetrdf/rdf-helpers": "dev-dev"
     },
     "autoload": {
         "psr-4": {
