--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         export COVERALLS_RUN_LOCALLY=1
         export COVERALLS_REPO_TOKEN=${{ secrets.coverallsToken }}
-        composer require "psr/log:^2"
-        composer require "php-coveralls/php-coveralls"
+        rm -fR composer.json composer.lock vendor
+        composer require php-coveralls/php-coveralls
         php vendor/bin/php-coveralls -v
+
