--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "php": ">=8.1 <8.4",
+        "ext-yaml": "*",
         "guzzlehttp/guzzle": "^7",
         "zozlak/rdf-constants": "^1",
         "zozlak/query-part": "^2",
