--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=8.1 <8.4",
+        "php": "^8.1",
         "ext-yaml": "*",
         "guzzlehttp/guzzle": "^7",
         "zozlak/rdf-constants": "^1",
