--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
         composer update
     - name: phpstan
       run: |
-        phpstan analyze -l 6 src tests
+        vendor/bin/phpstan analyze -l 6 src tests
     - name: wait
       run: |
         while [ "`grep '# INIT SCRIPTS ENDED' log/initScripts.log | wc -l`" != "1" ]; do
